--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sanyam Kunwar</title>
+    <!-- default favicon -->
+<link rel="shortcut icon" href="/assets/profile-pic.png" type="image/x-icon">
+
+<!-- wideley used favicon -->
+<link rel="icon" href="/assets/profile-pic.png" sizes="32x32" type="image/png">
+
+<!-- for apple mobile devices -->
+<link rel="apple-touch-icon-precomposed" href="/assets/profile-pic.png" type="image/png" sizes="152x152">
+<link rel="apple-touch-icon-precomposed" href="/assets/profile-pic.png" type="image/png" sizes="120x120">
+
+<!-- google tv favicon -->
+<link rel="icon" href="/assets/profile-pic.png" sizes="96x96" type="image/png">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
