--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume.pdf')"
+            onclick="window.open('./assets/Resume1.pdf')"
           >
             Download CV
           </button>
